2011-05-26  Shane Stephens  <shanestephens@google.com>

Reviewed by James Robinson.

        REGRESSION (r81992): layout triggered by position update fails to apply when transform is updated at same time
        https://bugs.webkit.org/show_bug.cgi?id=60689

        * transforms/2d/set-transform-and-top-expected.txt: Added.
        * transforms/2d/set-transform-and-top.html: Added.
2011-05-26  Shane Stephens  <shanestephens@google.com>

        Reviewed by James Robinson.

        REGRESSION (r81992): layout triggered by position update fails to apply when transform is updated at same time
        https://bugs.webkit.org/show_bug.cgi?id=60689

        Test: transforms/2d/set-transform-and-top.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::simplifiedLayout):

Canonical link: https://commits.webkit.org/76919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87368 268f45cc-cd09-0410-ab3c-d52691b4dbfc